@@ -7,7 +7,8 @@
 - fixed `callback` argument in the `MailMessage.send2()` method
 - added `options.tz` for the cluster mode
 - updated `FlowStreamMessage.variables()` by adding support for nested properties `path1.path2.value`
-- updated `FlowStreamMessage.variables()`, keys for `data` must be in the form `{data.key}`
+- updated `FlowStreamMessage.variables()` keys for `data` must be in the form `{data.key}`
+- updated `FlowStreamMessage.variables(str, [data], [encoding])` by adding `encoding` argument
 
 ========================
 0.0.65
